[package]
name = "leviosa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
Inflector = "0.11.4"
ctor = "0.2.6"
chrono = "0.4.31"
rust_decimal = "1.33.1"
uuid = { version = "1.6.1", features = ["v4"] } 
serde_json = "1.0.108"


[dev-dependencies]
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "time", "chrono", "bigdecimal", "uuid" ] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
bigdecimal =  { version = "0.3.0", features = ["serde"]}
tokio = { version = "1", features = ["full"] }



